# astrosurveyutils

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
astrosurveyutils/: __init__.py  surveys.py
astrosurveyutils/data/: gcs-H-DR11_annotated.fits  las-Y-DR11_annotated.fits  vhs-Y-DR6_annotated.fits
survey_coverage/: __init__.py  surveys.py  utils.py
survey_coverage/data/: dxs-J-DR11_annotated.fits  gcs-J-DR11_annotated.fits  gcs-Y-DR11_annotated.fits  gps-H-DR11_annotated.fits  las-H-DR11_annotated.fits  las-J2-DR11_annotated.fits  uhs-J-DR2_annotated.fits  video-H-DR4_annotated.fits  video-J-DR4_annotated.fits  viking-H-DR5_annotated.fits  viking-J-DR5_annotated.fits  vmc-J-DR4_annotated.fits  vmc-Y-DR4_annotated.fits  vvv-J-DR5_annotated.fits  vvv-Y-DR5 (1)_annotated.fits
survey_coverage/notebooks/: example.ipynb
survey_coverage/notebooks/.ipynb_checkpoints/: example-checkpoint.ipynb
surveyutils/: __init__.py  surveys.py
surveyutils/data/: dxs-H-DR11_annotated.fits  gps-J-DR11_annotated.fits  gps2-H-DR11_annotated.fits  las-J-DR11_annotated.fits  uds-J-DR11_annotated.fits  vhs-H-DR6_annotated.fits  vhs-J-DR6_annotated.fits  video-Y-DR4_annotated.fits  viking-Y-DR5_annotated.fits  vvv-H-DR5_annotated.fits
surveyutils/notebooks/: example.ipynb
