[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "astrosurveyutils"
version = "0.0.1"
authors = [
  { name="Viraj Karambelkar", email="viraj@astro.caltech.edu" },
]
description = "Astronomical survey utilities"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
        "astropy",
        "numpy",
        "pandas",
        "jupyter",
        "matplotlib",
        "mocpy==0.12.0",
        "pandas"
    ]

[project.urls]
"Homepage" = "https://github.com/virajkaram/astrosurveyutils"
"Bug Tracker" = "https://github.com/virajkaram/astrosurveyutils/issues"

[tool.setuptools]
packages = ["astrosurveyutils"]
include-package-data = true

[tool.setuptools.package-data]
surveyutils = ["data/*"]
